syntax = "proto3";

package greet;

option java_package="com.proto.greet";
option java_multiple_files=true;

message Greeting{
  string first_name = 1;
  string last_name = 2;
}

message GreetingRequest{
  Greeting greeting=1;
}
message GreetResponse{
  string response = 1;
}

//Server streaming

message GreetManyTimesRequest{
  Greeting greeting=1;
}

message GreetManyTimesResponse{
  string response=1;
}

service GreetService{
  //Unary Service
  rpc Greet(GreetingRequest) returns (GreetResponse) {};
  //Server stream API
  rpc GreetManyTimes(GreetManyTimesRequest) returns(stream GreetManyTimesResponse){};
}